--- a/CryptoDashboard/CryptoDashboard.Api/CryptoDashboard.Api.csproj
+++ b/CryptoDashboard/CryptoDashboard.Api/CryptoDashboard.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CryptoDashboard.Datalayer.Coinbase\CryptoDashboard.Datalayer.Coinbase.csproj" />
+  </ItemGroup>
+
 </Project>
