--- a/CryptoDashboard/CryptoDashboard.Datalayer.Coinbase/CryptoDashboard.Datalayer.Coinbase.csproj
+++ b/CryptoDashboard/CryptoDashboard.Datalayer.Coinbase/CryptoDashboard.Datalayer.Coinbase.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Flurl.Http" Version="3.2.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
