--- a/CryptoDashboard/CryptoDashboard.Api/CryptoDashboard.Api.csproj
+++ b/CryptoDashboard/CryptoDashboard.Api/CryptoDashboard.Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CryptoDashboard.Datalayer.Coinbase\CryptoDashboard.Datalayer.Coinbase.csproj" />
+    <ProjectReference Include="..\CryptoDashboard.Datalayer.Coinbase\CryptoDashboard.Datalayer.Coinbase.Core.csproj" />
   </ItemGroup>
 
 </Project>
